--- a/scss/main.scss
+++ b/scss/main.scss
@@ -104,3 +104,13 @@ html {
         }
     }
 }
+// navigation finished
+// slider start
+section{
+    .carousel-inner{
+        img{
+            height: 90vh;
+        }
+    }
+}
+// slider finished
