--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@ html {
 
 // navigation bar start ----------
 .navbar {
-    background-color: #120f22;
+    background-color: #120f2200;
     font-size: 1.8rem;
 
     ul{
