--- a/scss/main.css
+++ b/scss/main.css
@@ -141,4 +141,10 @@ html {
 section .carousel-inner img {
   height: 100vh;
 }
+
+@media screen and (max-with: 330px) {
+  section .carousel-inner img {
+    height: 50vh !important;
+  }
+}
 /*# sourceMappingURL=main.css.map */
