--- a/scss/main.scss
+++ b/scss/main.scss
@@ -113,11 +113,11 @@ section{
         }
     }
 }
-@media screen and (max-with: 330px){
+@media screen and (max-width: 360px){
     section{
         .carousel-inner{
-            img{
-                height: 50vh !important;
+            #img{
+                height: 60vh !important;
             }
         }
     }
