--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,8 +5,7 @@
 }
 html {
     font-size: 10px;
-      
-} 
+}
 .outer {
     // border: 1px solid blue;
     margin: 0 10px;
@@ -20,49 +19,49 @@ html {
     background-color: #120f2200;
     font-size: 1.8rem;
 
-    ul{
-        li{
-            a{
+    ul {
+        li {
+            a {
                 position: relative;
-                transition: all .5s ease;
+                transition: all 0.5s ease;
             }
-            a:hover{
-                transform: scale(.91);
-                transition: all .5s ease;
+            a:hover {
+                transform: scale(0.91);
+                transition: all 0.5s ease;
             }
-            a::after{
+            a::after {
                 content: "";
-                width:0;
-                height: .3rem;
+                width: 0;
+                height: 0.3rem;
                 position: absolute;
                 bottom: 0;
                 left: 0;
                 background-color: rgb(98, 31, 253);
-                transition: all .5s ease;
+                transition: all 0.5s ease;
             }
-            .act::before{
+            .act::before {
                 content: "";
-                width:100%;
-                height: .05rem;
+                width: 100%;
+                height: 0.05rem;
                 position: absolute;
                 top: 0;
                 left: 0;
                 background-color: #fff;
-                transition: all .5s ease;
+                transition: all 0.5s ease;
             }
-            .act::after{
+            .act::after {
                 content: "";
-                width:100%;
-                height: .05rem;
+                width: 100%;
+                height: 0.05rem;
                 position: absolute;
                 bottom: 0;
                 left: 0;
                 background-color: #fff;
-                transition: all .5s ease;
+                transition: all 0.5s ease;
             }
-            a:hover::after{
+            a:hover::after {
                 width: 100%;
-                transition: all .5s ease;
+                transition: all 0.5s ease;
             }
         }
     }
@@ -71,26 +70,25 @@ html {
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: all .7s ease;
-        i:hover{
-            box-shadow: 0 0 1rem .2rem #dfe1eb inset;
-            transition: all .7s ease;
+        transition: all 0.7s ease;
+        i:hover {
+            box-shadow: 0 0 1rem 0.2rem #dfe1eb inset;
+            transition: all 0.7s ease;
             border: none;
-            
         }
         .fa {
             width: 4rem;
             height: 4rem;
             border: 0.01rem solid white;
             border-radius: 50%;
-            margin: .3rem;
+            margin: 0.3rem;
             color: white;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
         }
-        .fa-facebook:hover{
+        .fa-facebook:hover {
             color: #161aeb;
         }
         .fa-instagram:hover {
@@ -103,21 +101,21 @@ html {
             color: hsl(201, 53%, 78%);
         }
     }
-} 
+}
 // navigation finished
 // slider start
-section{
-    .carousel-inner{
-        img{
+.slider {
+    .carousel-inner {
+        #img {
             height: 100vh;
         }
     }
 }
-@media screen and (max-width: 360px){
-    section{
-        .carousel-inner{
-            #img{
-                height: 60vh !important;
+@media screen and (max-width: 360px) {
+    .slider {
+        .carousel-inner {
+            #img {
+                height: 60vh;
             }
         }
     }
