--- a/scss/main.css
+++ b/scss/main.css
@@ -138,12 +138,12 @@ html {
   color: #a9d0e5;
 }
 
-.slider .carousel-inner #img {
+#img {
   height: 100vh;
 }
 
 @media screen and (max-width: 360px) {
-  .slider .carousel-inner #img {
+  #img {
     height: 60vh;
   }
 }
