--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,7 +108,7 @@ html {
 #img {
     height: 90vh;
 }
-@media screen and (max-width: 420px) {
+@media (max-width: 500px) {
     #img {
         height: 60vh;
     }
