--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 html {
-    font-size: 10px;
+    font-size: 62.5%;
 }
 .outer {
     // border: 1px solid blue;
@@ -108,10 +108,57 @@ html {
 #img {
     height: 90vh;
 }
-@media (max-width: 500px) {
-    #img {
-        height: 60vh;
-    }
-}
 
 // slider finished
+
+// home About start
+.homeAbout {
+    background: #161aeb url("../img/ABOUT-US-BG.jpg");
+    min-height: 50rem;
+    position: relative;
+    .imgbox {
+        height: 100%;
+        width: 50vw;
+    }
+    img {
+        height: 100%;
+        width: 50%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+    .home-about-text {
+        margin: 1rem auto;
+        position: absolute;
+        top: 5rem;
+        right: 2rem;
+        height: 100%;
+        
+        h2 {
+            color: white;
+            font-size: 4rem;
+            font-weight: bolder;
+        }
+        p {
+            text-align: justify;
+            color: white;
+            font-size: 2rem;
+        }
+    }
+}
+@media (max-width: 520px) {
+    .homeAbout {
+        display: block;
+        img {
+            display: block;
+            width: 90%;
+        }
+    }
+    .home-about-text {
+        padding: .5rem 1rem;
+        display: block;
+        top: .5rem;
+        width: 90%;
+    }
+}
+// home About start
