--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@ html {
     margin: 0 10px;
     box-shadow: 0 0 1.8rem 0.2rem #120f22b7;
     background-color: aquamarine;
-    height: 1000px;
+    min-height: 1000px;
 }
 
 // navigation bar start ----------
