--- a/main.css
+++ b/main.css
@@ -194,10 +194,9 @@ nav {
     background-image: url('img/about-us+ironman.jpg');
     background-size: 100%;
     height: 80vh;
-    background-repeat: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
     min-height: 400px;
-    /* display: flexbox; */
-    /* flex-direction: column; */
 }
 
 .about p {
@@ -221,6 +220,9 @@ nav {
     }
     .slider {
         margin-top: 10.8rem;
+    }
+    .about{
+        height: 60vh;
     }
 }
 
